--- a/requirements.txt
+++ b/requirements.txt
@@ -5,35 +5,52 @@ aiosignal==1.3.1
 asgiref==3.7.2
 astroid==3.3.5
 attrs==24.2.0
+autobahn==24.4.2
+Automat==24.8.1
 beautifulsoup4==4.12.3
 certifi==2024.8.30
+cffi==1.17.1
+channels==4.2.0
+channels-redis==4.1.0
 charset-normalizer==3.4.0
 click==8.1.7
+constantly==23.10.4
+cryptography==44.0.0
+daphne==4.1.2
 dill==0.3.9
 Django==5.0
 django-phonenumber-field==8.0.0
 feedparser==6.0.11
 frozenlist==1.5.0
 h11==0.14.0
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
 isort==5.13.2
 mccabe==0.7.0
+msgpack==1.1.0
 multidict==6.1.0
 outcome==1.3.0.post0
 phonenumbers==8.13.49
 Pillow==10.1.0
 platformdirs==4.3.6
 propcache==0.2.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 PyJWT==2.9.0
 pylint==3.3.1
 pylint-django==2.6.1
 pylint-plugin-utils==0.8.2
+pyOpenSSL==24.3.0
 pyotp==2.9.0
 PySocks==1.7.1
 python-dotenv==1.0.0
 pytz==2024.2
+redis==5.2.1
 requests==2.32.3
 selenium==4.26.1
+service-identity==24.2.0
 setuptools==75.4.0
 sgmllib3k==1.0.0
 sniffio==1.3.1
@@ -46,8 +63,11 @@ Tree==0.2.4
 trio==0.27.0
 trio-websocket==0.11.1
 twilio==9.3.7
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.9.0
 urllib3==2.2.3
 websocket-client==1.8.0
 wsproto==1.2.0
 yarl==1.17.1
+zope.interface==7.2
